src/core-crm/objects/Case_Priority_Configuration__c/Case_Priority_Configuration__c.object-meta.xml
<CustomObject>
    <description>Case Priority Configuration object to Support the Priority Framework for Case Enquiries</description>
    <label>Case Priority Configuration</label>
    <nameField>
        <displayFormat>CPC-{0000}</displayFormat>
        <label>Priority Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Priority Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>