src/core-crm/objects/Case_Priority_Configuration__c/fields/Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type__c</fullName>
    <description>The Case Type this Configuration is associated with</description>
    <label>Case Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic FS Enquiry</fullName>
            </value>
            <value>
                <fullName>International FS Enquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>