src/core-crm/objects/Case_Priority_Configuration__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>The case type this configuration is associated with</description>
    <label>Case Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Domestic Future Student Enquiry</fullName>
            </value>
            <value>
                <fullName>International Future Student Enquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>