src/core-crm/objects/Case_Priority_Configuration__c/fields/Country_Tier__c.field-meta.xml
<CustomField>
    <fullName>Country_Tier__c</fullName>
    <description>Tiering Countries for Future Student recruitment</description>
    <label>Country Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Developed Nations</fullName>
            </value>
            <value>
                <fullName>Untiered - Unrestricted</fullName>
            </value>
            <value>
                <fullName>Untiered - Restricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>