src/core-crm/objects/Case_Priority_Configuration__c/fields/Country_Tier_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Country_Tier_Subcategory__c</fullName>
    <label>Country Tier Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restricted</fullName>
            </value>
            <value>
                <fullName>Unrestricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>