src/core-crm/objects/Case_Priority_Configuration__c/fields/Date_from__c.field-meta.xml
<CustomField>
    <fullName>Date_from__c</fullName>
    <description>The inclusive starting date that defines high priority period for Future Student enquiries.</description>
    <label>Date from</label>
    <type>Date</type>
</CustomField>