src/core-crm/objects/Case_Priority_Configuration__c/fields/Date_to__c.field-meta.xml
<CustomField>
    <fullName>Date_to__c</fullName>
    <description>The inclusive end date that defines high priority period for Future Student enquiries.</description>
    <label>Date to</label>
    <type>Date</type>
</CustomField>