src/core-crm/objects/Case_Priority_Configuration__c/fields/Enquiry_Category__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Category__c</fullName>
    <description>The top level classification of the Enquiries</description>
    <label>Enquiry Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entry requirements &amp; study pathways</fullName>
            </value>
            <value>
                <fullName>Course information</fullName>
            </value>
            <value>
                <fullName>Applying for a course</fullName>
            </value>
            <value>
                <fullName>My application and offer</fullName>
            </value>
            <value>
                <fullName>My enrolment</fullName>
            </value>
            <value>
                <fullName>Fees, costs and scholarships</fullName>
            </value>
            <value>
                <fullName>Student life</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>