src/core-crm/objects/Case_Priority_Configuration__c/fields/Enquiry_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Sub_Category__c</fullName>
    <description>The sub Classification of the enquiries based on selected enquiry Category.</description>
    <label>Enquiry Sub-Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prior Australian study</fullName>
            </value>
            <value>
                <fullName>Prior international study</fullName>
            </value>
            <value>
                <fullName>Work experience</fullName>
            </value>
            <value>
                <fullName>Pathways without prior study</fullName>
            </value>
            <value>
                <fullName>Entry requirements</fullName>
            </value>
            <value>
                <fullName>English language and academic pathway</fullName>
            </value>
            <value>
                <fullName>Assumed knowledge/Prerequisites</fullName>
            </value>
            <value>
                <fullName>Entry/ATAR adjustments</fullName>
            </value>
            <value>
                <fullName>Advanced standing/Credit prior learning</fullName>
            </value>
            <value>
                <fullName>Placements</fullName>
            </value>
            <value>
                <fullName>Careers and outcomes</fullName>
            </value>
            <value>
                <fullName>Accreditation</fullName>
            </value>
            <value>
                <fullName>Course overview</fullName>
            </value>
            <value>
                <fullName>How to apply</fullName>
            </value>
            <value>
                <fullName>Application and acceptance dates</fullName>
            </value>
            <value>
                <fullName>Transfer to QUT</fullName>
            </value>
            <value>
                <fullName>Application status</fullName>
            </value>
            <value>
                <fullName>Changing my application</fullName>
            </value>
            <value>
                <fullName>Changing my QTAC preferences</fullName>
            </value>
            <value>
                <fullName>Accepting my offer</fullName>
            </value>
            <value>
                <fullName>Deferring my offer</fullName>
            </value>
            <value>
                <fullName>Application technical support</fullName>
            </value>
            <value>
                <fullName>Application documentation</fullName>
            </value>
            <value>
                <fullName>How to enroll into a unit</fullName>
            </value>
            <value>
                <fullName>How to register for a class</fullName>
            </value>
            <value>
                <fullName>Classes and timetables</fullName>
            </value>
            <value>
                <fullName>Scholarships</fullName>
            </value>
            <value>
                <fullName>Government loans</fullName>
            </value>
            <value>
                <fullName>Tuition fees</fullName>
            </value>
            <value>
                <fullName>Student services and amenities fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>