src/core-crm/objects/Case_Priority_Configuration__c/fields/Future_Student_Stage__c.field-meta.xml
<CustomField>
    <fullName>Future_Student_Stage__c</fullName>
    <description>The stage the Future Student is, in their journey to becoming a student in QUT</description>
    <label>Future Student Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Explore</fullName>
            </value>
            <value>
                <fullName>Apply</fullName>
            </value>
            <value>
                <fullName>Offer</fullName>
            </value>
            <value>
                <fullName>Accept-Admit</fullName>
            </value>
            <value>
                <fullName>Study</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>