src/core-crm/objects/Case_Priority_Configuration__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag that indicates if the configuration is Active or has been deactivated</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>