src/core-crm/objects/Case_Priority_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country_Tier__c</columns>
    <columns>Enquiry_Category__c</columns>
    <columns>Enquiry_Sub_Category__c</columns>
    <columns>Lead_Score__c</columns>
    <columns>Future_Student_Stage__c</columns>
    <columns>Applicant_Onshore__c</columns>
    <columns>Date_from__c</columns>
    <columns>Date_to__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>